# terminal-plugin

./: README.md  __init__.py  api.py  protoagent.plugin.yaml  pty_session.py  pyproject.toml  requirements-dev.txt  view.py
.github/workflows/: ci.yml
tests/: conftest.py  test_api.py  test_packaging.py  test_pty_session.py
