[project]
name = "terminal-plugin"
version = "0.2.0"            # keep in lockstep with protoagent.plugin.yaml (a test enforces it)
description = "A full terminal (xterm.js + a real PTY over WebSocket) as a protoAgent console plugin."
requires-python = ">=3.11"

# No runtime pip deps: the PTY backend is stdlib (pty/os/fcntl/termios), the host
# (protoAgent) provides fastapi + langchain-core, and xterm.js is VENDORED + served
# locally (offline — no CDN). The only OS requirement is a Unix PTY (Linux/macOS).

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
timeout = 60               # no test may hang (these drive PTYs + a WS) — fail with a traceback

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501", "E702", "E731", "E741"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
